--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -16,8 +16,7 @@
 <strong><ahref="#_Toc2020101911">比利时警告：疫情已失控 “海啸”逼近</a></strong><br />
 <strong><ahref="#_Toc2020101910b">英国议会女议员染疫住院</a></strong><br />
 <strong><ahref="#_Toc2020101910a">俄新增病例近1.6万 再创单日新高</a></strong><br />
-<strong><ahref="#_Toc2020101910">印度新增55,722例确诊</a></strong><br />
-<strong><ahref="#_Toc2020101909">川普：不会忘记病毒来自中国</a></strong></p>
+<strong><ahref="#_Toc2020101910">印度新增55,722例确诊</a></strong></p>
 <p>根据约翰?霍普金斯大学（Johns Hopkins University）的数据，截至北京时间10月18日下午1时，全球确诊感染<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）的人数已突破4,000万，死亡人数超过111万（注：因中共和伊朗隐瞒疫情数据，真实数据比统计的要高）。</p>
 <p>美国确诊病例超过808万例，死亡超过21.8万人。美东时间周日（10月18日）中午12点21分，美国疾控中心（CDC）数据显示，全美在过去24小时新增53,157病例，死亡593人。每10万人感染人数最多的州是北达科他州、南达科他州、蒙大拿州和威斯康星州。</p>
 <p>欧洲疫情爆发，新病例增长幅度已经超过美国。周日意大利新增病例达11,705，创下纪录，重症室人数也是10天前的2倍。国际货币基金组织表示，全面封锁的可能性不大。</p>
@@ -27,6 +26,7 @@
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
 <h3>宾州病例再度激增 全州感染率逾4％</h3>
+<figure id="attachment_12487254" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1054355758.jpg"><img class="size-large wp-image-12487254" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1054355758-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">图为宾夕法尼亚州州长汤姆·沃尔夫（Tom Wolf）。（Jeff Swensen / Getty Images）</figcaption></figure>
 <p>州长汤姆·沃尔夫（Tom Wolf）和州卫生部部长雷切尔·莱文（Rachel Levine）博士周一说，宾夕法尼亚州正在经历Covid-19的再度激增，但数量仍比春季的第一波低很多。</p>
 <p>全州测试阳性率为4.3％，21个县的阳性率大于5％。</p>
 <p>宾夕法尼亚州周一至少报告了1,103例新病例，这是该州连续第14天每天记录超过1,000例新病例。</p>
@@ -37,6 +37,7 @@
 <p>主办方说，客人可以免费进入展览中心，并体验独特的、对汽车友善的景点，这些景点着眼于该州的农业、历史、艺术和文化。</p>
 <p>“在我们一生中最严重的全球危机中，我们希望给社区带来正面的希望，”总经理南希·史密斯（Nancy Smith）说。</p>
 <h3>法国第一夫人自我隔离</h3>
+<figure id="attachment_12487234" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229024293.jpg"><img class="size-large wp-image-12487234" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229024293-600x413.jpg" alt="" width="600" b="413" /></a><figcaption class="wp-caption-text">2020年10月12日，法国第一夫人碧姬·马克龙（Brigitte Macron）在凡尔赛附近的勒斯奈（Le Chesnay）的一所学校，向学生梦发表讲话，以支持欧洲白细胞萎缩症协会（ELA）。（Photo by THOMAS COEX/POOL/AFP via Getty Images）</figcaption></figure>
 <p>法国爱丽舍宫周一说，法国第一夫人碧姬·马克龙（Brigitte Macron）在可能暴露于染疫者之后正在自我隔离。</p>
 <p>爱丽舍宫说，第一夫人在上周四会见了某人，该人后来在周一被检出了中共病毒呈阳性。</p>
 <p>她没有出现任何症状，但会从今天开始隔离7天。</p>
@@ -320,7 +321,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/29/n10939788.md#1" target="_blank">共产暴政录：湖南道县大屠杀</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/11/n7543764.md#1" target="_blank">军转干部感恩法轮大法给了第二次生命</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/12/n10556515.md#1" target="_blank">凌晓辉：毒害人类灵魂的共产主义理论（上）</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/18/n11461393.md#1" target="_blank">“中共是所有人噩梦”美智库主席吁解体中共</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
