--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -321,7 +321,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/7/n11707479.md#1" target="_blank">林辉：上海中国国货公司创办人死于文革前</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/5/n3676026.md#1" target="_blank">老警察讲的笑话让人想哭</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/8/n11098413.md#1" target="_blank">共产暴政录：唐山大地震曾被预测出来</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/3/n11297122.md#1" target="_blank">外媒：中国陆军医院前实习生亲历活摘器官</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
