--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -321,7 +321,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/8/n11098413.md#1" target="_blank">共产暴政录：唐山大地震曾被预测出来</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/3/n11297122.md#1" target="_blank">外媒：中国陆军医院前实习生亲历活摘器官</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/12/n10708622.md#1" target="_blank">陋兰：隐瞒和谎言，极权身体里的黄色血液</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/30/n11289569.md#1" target="_blank">纽约州六位参议员祝贺法轮大法日</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
