--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -9,14 +9,15 @@
 	<p>【大纪元2020年10月19日讯】（大纪元记者夏雨、戴芙若、颜殊璟、林燕综合报导）10月19日全球<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）疫情最新情况：</p>
 <p>中共肺炎全球疫情及美国疫情大数据请点击<ahref="https://github.com/oqzulz329/djy/blob/master/gb/nf1368917.md#1" target="_blank" rel="noopener noreferrer">这里</a>。</p>
 <h2>要点：</h2>
-<p><strong><ahref="#_Toc2020101915">研究：疗养院染疫居民测试前多无症状</a></strong><br />
+<p><strong><ahref="#_Toc2020101916">西班牙周末增近4万病例 总病例逼近百万</a></strong><br />
+<strong><ahref="#_Toc2020101915">研究：疗养院染疫居民测试前多无症状</a></strong><br />
 <strong><ahref="#_Toc2020101914">美加边境关闭延长至11月21日</a></strong><br />
 <strong><ahref="#_Toc2020101913">全球病例突破4000万大关</a></strong><br />
 <strong><ahref="#_Toc2020101912">TSA单日筛查人数首破百万</a></strong><br />
 <strong><ahref="#_Toc2020101911">比利时警告：疫情已失控 “海啸”逼近</a></strong><br />
 <strong><ahref="#_Toc2020101910b">英国议会女议员染疫住院</a></strong><br />
-<strong><ahref="#_Toc2020101910a">俄新增病例近1.6万 再创单日新高</a></strong><br />
-<strong><ahref="#_Toc2020101910">印度新增55,722例确诊</a></strong></p>
+<strong><ahref="#_Toc2020101910a">俄新增病例近1.6万 再创单日新高</a></strong><strong><br />
+</strong></p>
 <p>根据约翰?霍普金斯大学（Johns Hopkins University）的数据，截至北京时间10月18日下午1时，全球确诊感染<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）的人数已突破4,000万，死亡人数超过111万（注：因中共和伊朗隐瞒疫情数据，真实数据比统计的要高）。</p>
 <p>美国确诊病例超过808万例，死亡超过21.8万人。美东时间周日（10月18日）中午12点21分，美国疾控中心（CDC）数据显示，全美在过去24小时新增53,157病例，死亡593人。每10万人感染人数最多的州是北达科他州、南达科他州、蒙大拿州和威斯康星州。</p>
 <p>欧洲疫情爆发，新病例增长幅度已经超过美国。周日意大利新增病例达11,705，创下纪录，重症室人数也是10天前的2倍。国际货币基金组织表示，全面封锁的可能性不大。</p>
@@ -25,6 +26,14 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<p><a name="_Toc2020101916"></a></p>
+<h3>西班牙周末增近4万病例 总病例逼近百万</h3>
+<figure id="attachment_12487290" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229105562.jpg"><img class="size-large wp-image-12487290" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229105562-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2020年10月16日，医护人员于在莱加内斯的塞韦罗奥乔亚大学医院的重症监护室（ICU）工作。（PIERRE-PHILIPPE MARCOU/AFP via Getty Images）</figcaption></figure>
+<p>根据西班牙卫生部周一发布的数据，西班牙周末增加了37,889例Covid-19病例，全国病例总数达到974,449例。</p>
+<p>西班牙周末报告了217人死亡，死亡总人数达到了33,992人，</p>
+<p>同样在周一，由于Covid-19边了增加，纳瓦拉地区区长玛丽亚·奇维特（Maria Chivite）宣布封锁，并从周四开始关闭该地区的服务业。奇维特说，这些措施将持续15天。根据周一发布的数据，纳瓦拉地区的总病例为25,799例。</p>
+<p>西班牙中央政府已宣布马德里地区进入紧急状态，强制在首都及其周边地区实施部分封锁。</p>
+<p>10月14日，东北部富裕的加泰罗尼亚地区命令在接下来的15天关闭所有酒吧和餐馆。</p>
 <h3>宾州病例再度激增 全州感染率逾4％</h3>
 <figure id="attachment_12487254" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1054355758.jpg"><img class="size-large wp-image-12487254" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1054355758-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">图为宾夕法尼亚州州长汤姆·沃尔夫（Tom Wolf）。（Jeff Swensen / Getty Images）</figcaption></figure>
 <p>州长汤姆·沃尔夫（Tom Wolf）和州卫生部部长雷切尔·莱文（Rachel Levine）博士周一说，宾夕法尼亚州正在经历Covid-19的再度激增，但数量仍比春季的第一波低很多。</p>
@@ -321,7 +330,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/25/n11000789.md#1" target="_blank">共产暴政录：消灭思想先驱的“一打三反”</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/2/11/n4637812.md#1" target="_blank">修炼法轮功 母亲摆脱严重糖尿病重获新生</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/15/n10785014.md#1" target="_blank">共产暴政录：镇压“反革命”运动</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/11/n10706291.md#1" target="_blank">波兰中欧经济论坛 政要签名支持控告江泽民</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
