--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -26,6 +26,15 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>川普：下次总统辩论前测试</h3>
+<figure id="attachment_12485353" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229157892.jpg"><img class="size-large wp-image-12485353" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229157892-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">周日（10月18日），美国总统川普来到内华达州大选集会上发表演讲。（MANDEL NGAN/AFP via Getty Images)</figcaption></figure>
+<p>美国总统川普周一（10月19日）表示，他将在本周与民主党候选人拜登进行下一次总统辩论之前测试中共病毒。</p>
+<p>当被问及是否在周四纳什维尔辩论之前将进行测试时，村哦对记者说：“当然我不会有问题。”</p>
+<p>川普于10月2日宣布，他对COVID-19的检测为阳性。</p>
+<h3>美逾219,000人死于中共病毒</h3>
+<p>根据约翰·霍普金斯大学的数据，在美国，至少有8,180,502例最高病毒病例，至少219,891人死于该病毒。</p>
+<p>周一到目前为止，约翰·霍普金斯大学已记录25,908例新病例，其中217例死亡。</p>
+<p>总数包括来自所有50个州、哥伦比亚特区和其他美国领土的病例，以及撤侨病例。</p>
 <p><a name="_Toc2020101916"></a></p>
 <h3>西班牙周末增近4万病例 总病例逼近百万</h3>
 <figure id="attachment_12487290" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229105562.jpg"><img class="size-large wp-image-12487290" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229105562-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2020年10月16日，医护人员于在莱加内斯的塞韦罗奥乔亚大学医院的重症监护室（ICU）工作。（PIERRE-PHILIPPE MARCOU/AFP via Getty Images）</figcaption></figure>
@@ -330,7 +339,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/15/n10785014.md#1" target="_blank">共产暴政录：镇压“反革命”运动</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/11/n10706291.md#1" target="_blank">波兰中欧经济论坛 政要签名支持控告江泽民</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/11/n10048859.md#1" target="_blank">《苦菜花》人物原型的真实人生（5）</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/10/n7538390.md#1" target="_blank">晚期食道癌患者：法轮功救了我的命</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
