--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -3,6 +3,7 @@
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486819.md#1" target="_blank">【一线采访】民众厦门举横幅要中共下台</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486819.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/bdcdc5ed7fc0ea0a62a47979d595029a-150x120.jpg" align ="left"></a>日前，中国维权人士肖春在街头举起写有“人权民主法治”等字样的横幅，并要求中共下台，追究其迫害中国百姓的罪责。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 10:33 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482137.md#1" target="_blank">【最新疫情10.19】全球病例突破4千万大关</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482137.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/09/GettyImages-1228568126-150x120.jpg" align ="left"></a>美国确诊病例超过808万例，死亡超过21.8万人。美东时间周日（10月18日）中午12点21分，美国疾控中心（CDC）数据显示，全美在过去24小时新增53,157病例，死亡593人。每10万人感染人数最多的州是北达科他州、南达科他州、蒙大拿州和威斯康星州。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 10:00 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482843.md#1" target="_blank">【独家】严控意识形态 习近平左转三节点</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482843.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-146033862-600x400-150x120.jpg" align ="left"></a>“十八大”以来，习近平和中共一直强调“加强党的领导”，并收紧对意识形态领域的控制。这个过程中，在2013年、2015年、2017年，中共内部都下发了相应的文件，成为习近平当局“左转”的重要节点。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 8:57 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485349.md#1" target="_blank">万人拉和平人链 德民众：中共病毒令人惊醒</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485349.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/IMG_6394-150x120.jpg" align ="left"></a>“和平人链”由“横向思维”组织举办，包括博登湖三国，德国、奥地利和瑞士，加上瑞士的国中国——列支敦斯登，一共四个国家的民众参与。人们希望通过拥抱欧洲的心脏——博登湖，以团结、和平、互爱，不分国籍、信仰、对中共病毒的态度等，向世界发出渴求自由与和平的信号。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 8:29 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486178.md#1" target="_blank">中共人质外交威胁美加 专家：流氓本性使然</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486178.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-81377998-600x399-150x120.jpg" align ="left"></a>近日，中共不仅威胁要抓捕在华的美国人以报复美国合法起诉中共军方学者，甚至以在港30万加拿大人的人身安全为要挟，要加拿大政府不要给予香港人政治庇护。专家表示，中共是土匪出身，人质绑架是其政党基因里自带的邪恶。中共的所为向外界公开展示了其流氓无赖的本性。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 7:19 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486089.md#1" target="_blank">田云：推特涉嫌干预美大选 言论审查水多深？</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486089.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/24902f38edac31c9-150x120.jpg" align ="left"></a>科技巨头竟然大搞言论审查，美版404的背后有哪些因素作怪？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 4:29 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486027.md#1" target="_blank">丑闻爆发前 脸书推特高层加入拜登竞选团队</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486027.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228999788-150x120.jpg" align ="left"></a>《纽约邮报》日前登出民主党候选人拜登父的贪腐丑闻，不过立即遭到脸书（Facebook）和推特（Twitter）以“等候事实查核”为由的直接封锁，此事也让拜登竞选团队与科技巨头的深厚关系浮上台面，引起网路上许多批评。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 4:19 PM							</td></tr>
@@ -41,6 +42,5 @@ WHO：欧洲某些地区的重症监护病房近满员
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12483848.md#1" target="_blank">田云：电脑门发酵 拜登竞选经理自曝民调不实</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12483848.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/biden-and-harris-2-1200x800-150x120.jpg" align ="left"></a>这两条消息很不寻常。大选进入白热化阶段之际，拜登竞选团队忽然灭自家威风，这是在为败选打预防针吗？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 3:18 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12480830.md#1" target="_blank">【重播】川普威斯康星州演讲 支持执法机构</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12480830.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229134416-150x120.jpg" align ="left"></a>周六（10月17日）晚19:00（美东），美国总统川普在威斯康星州发表演讲 支持美国执法机构。大纪元将进行现场直播（中文同声翻译）......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 8:21 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483509.md#1" target="_blank">拜登电脑门 美参议员要FBI回答六大问题</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483509.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/05/190502194119100699-150x120.jpg" align ="left"></a>美国联邦参议员、国土安全与政府事务委员会主席罗恩?约翰逊（Ron Johnson）周六（10月17日）致函给联邦调查局（FBI）局长，要求FBI在下周四（22日）之前回答，他们是如何处理亨特?拜登（Hunter Biden）的笔记本电脑资料的。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 7:41 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483499.md#1" target="_blank">美ICE今秋第二轮行动 逮捕176在逃非法移民</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483499.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-945287254-150x120.jpg" align ="left"></a>美国移民和海关执法局（ICE）机构周四（10月15日）宣布，已在全国范围内逮捕了一百七十多名在逃的非法移民，重点是针对避难所城市的非法移民逃犯。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 7:03 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/oqzulz329/djy/blob/master/gb/nf4514.md#1<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/oqzulz329/djy/blob/master/gb/nf4514.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514.htm">https://www.epochtimes.com/gb/nf4514.htm</a>    （国内需<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
