--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -3,6 +3,7 @@
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486819.md#1" title="【一线采访】民众厦门举横幅要中共下台""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/bdcdc5ed7fc0ea0a62a47979d595029a-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482137.md#1" title="【最新疫情10.19】全球病例突破4千万大关""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/09/GettyImages-1228568126-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482843.md#1" title="【独家】严控意识形态 习近平左转三节点""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-146033862-600x400-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485349.md#1" title="万人拉和平人链 德民众：中共病毒令人惊醒""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/IMG_6394-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486178.md#1" title="中共人质外交威胁美加 专家：流氓本性使然""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-81377998-600x399-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486027.md#1" title="丑闻爆发前 脸书推特高层加入拜登竞选团队""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228999788-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485477.md#1" title="中共外交官闯台外馆国庆酒会打伤人 台抗议""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/fe83448f748c2ea6be9a1ab534a9a78a-320x200.jpg">&nbsp;</a>
@@ -11,14 +12,13 @@
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12485050.md#1" title="中共为何强行火化他们的遗体（15）""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/Screen-Shot-2020-10-18-at-7.06.39-PM-320x200.png">&nbsp;</a>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483177.md#1" title="美国对中产阶级最好和最糟的十个州""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/07/GettyImages-51599832-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12485086.md#1" title="朱利安尼：拜登儿子抱怨 钱财与老爹分半""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-76111059-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12485003.md#1" title="伊朗称联合国武器禁运到期 蓬佩奥强烈回应""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/000_1QR3K3-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://oqzulz329.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486851.md#1">广州法轮功学员刘金焕被构陷到法院</a><br>
-:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486752.md#1">【直播】川普亚利桑那演讲“让美国再次伟大”</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487059.md#1">【有冇搞错】一带一路遭毛思想打击</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486944.md#1">三菱缩减大陆业务 11月关闭一合肥工厂</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487104.md#1">在社媒上为川普造势 美华人谈为何支持他</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486847.md#1">【珍言真语】梁锦祥：拜登丑闻曝中共靠港漂白</a><br>
+:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487211.md#1">【大选观察】拜登的烫手山芋：扩充最高法院</a><br>
+:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487085.md#1">NASA斥资在月球建4G网络 诺基亚接单</a><br>
+:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487124.md#1">美密歇根州长电视上露面 被指鼓励暗杀川普</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486851.md#1">广州法轮功学员刘金焕被构陷到法院</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486752.md#1">【直播】川普亚利桑那演讲“让美国再次伟大”</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487059.md#1">【有冇搞错】一带一路遭毛思想打击</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12483904.md#1">【翻墙必看】习在京露面 分析：暴露诡异之处</a><br>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484117.md#1">涉习江斗还是怕“光明”光明乳业被罚引热议</a><br>
@@ -41,7 +41,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 365,851,283 人
+!共 365,851,319 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
