--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -25,6 +25,11 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>疫情重创伦巴第大区 意政府同意新限制要求</h3>
+<figure id="attachment_12487358" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229118863.jpg"><img class="size-large wp-image-12487358" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229118863-600x399.jpg" alt="" width="600" b="399" /></a><figcaption class="wp-caption-text">2020年10月17日，戴着口罩的人们穿过米兰大教堂广场。意大利政府已强制要求在户外佩戴面部防护用品，以应对中共病毒大流行的蔓延。（MIGUEL MEDINA/AFP via Getty Images）</figcaption></figure>
+<p>意大利卫生部发言人周一称，意大利政府同意受到COVID-19打击的伦巴第大区的要求，施加进一步限制，以遏制新的感染激增。</p>
+<p>伦巴第大区以意大利金融首都米兰为中心，自2月份爆发以来，在意大利的423,500例总病例中，约有128,400例病例来自伦巴第。</p>
+<p>伦巴第大区在一份声明中表示，将提议政府从10月22日起停止非必要的经济活动，并于晚上11点以及凌晨5点之间停止人们的活动，还要求他们在周六和周日关闭所有大型商店。</p>
 <p><a name="_Toc2020101917"></a></p>
 <h3>川普：下次总统辩论前测试</h3>
 <figure id="attachment_12485353" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229157892.jpg"><img class="size-large wp-image-12485353" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229157892-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">周日（10月18日），美国总统川普来到内华达州大选集会上发表演讲。（MANDEL NGAN/AFP via Getty Images)</figcaption></figure>
@@ -61,21 +66,25 @@
 <p>她没有出现任何症状，但会从今天开始隔离7天。</p>
 <p>爱丽舍宫补充说，这不会改变马克龙总统的日程。他没有与后来测试阳性的人进行密切接触。</p>
 <h3>纽约州测试阳性率为1.2％</h3>
+<figure id="attachment_12392404" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/09/GettyImages-1271366242.jpg"><img class="size-large wp-image-12392404" src="https://i.epochtimes.com/assets/uploads/2020/09/GettyImages-1271366242-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2020年9月8日，纽约州州长安德鲁·库默（Andrew Cuomo）在纽约举行的新闻发布会上发表讲话。尽管面临业主压力，但他拒绝回复纽约市餐厅室内用餐（Spencer Platt/Getty Images）</figcaption></figure>
 <p>纽约州州长安德鲁·库默（Andrew Cuomo）周一报告称全州有14例新死亡，测试阳性率为1.2％，“红色区域”为3.3％。</p>
 <p>库默在周一的电话会议上说，该州已报告了934例住院治疗，其中198名重症监护患者。</p>
 <p>他说：“纽约的阳性率是全美最低的州之一，这要取决于当天的情况，但我们是第二或第一低的州。”</p>
 <h3>佛罗里达州新增病例不足2,000例?一周内首次</h3>
+<figure id="attachment_12463144" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228712595.jpg"><img class="size-large wp-image-12463144" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228712595-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2020年9月25日，佛罗里达州的坦帕（Tampa）：塔可酒吧（Bar Taco）的顾客就座吃晚餐。佛州自9月25日起，允许餐馆以100%客容量开业。（Octavio Jones / Getty Images）</figcaption></figure>
 <p>佛罗里达卫生部称，周一至少报告了1707例新的Covid-19病例，另有约54例死亡。</p>
 <p>根据州卫生部发布的数据，周一的每日中共病毒病例数是该州一周内首次不到2000例。</p>
 <p>州数据显示，该州现在总共至少有756,727例病例，居民死亡人数目前约为16,222。</p>
 <p><a name="_Toc2020101915"></a></p>
 <h3>研究：疗养院染疫居民测试前多无症状</h3>
+<figure id="attachment_12162248" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/06/GettyImages-1210097710.jpg"><img class="size-large wp-image-12162248" src="https://i.epochtimes.com/assets/uploads/2020/06/GettyImages-1210097710-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">图为新泽西安多弗养老院医护人员将病人送入救护车。（Eduardo Munoz Alvarez/Getty Images)</figcaption></figure>
 <p>根据周一发表的新研究，许多患有中共病毒的疗养院居民在测试前没有出现症状。</p>
 <p>美国布朗大学的伊丽莎白·怀特（Elizabeth White）及其同事在3月16日至7月15日之间，在350个熟练的护理机构研究了5,400名Covid-19患者。</p>
 <p>研究小组在《 JAMA Internal Medicine》杂志上报告说，其中40％以上没有症状。</p>
 <p>另有19％的病例是在接受检查之前没有任何症状，但是在接受检查后的14天内出现了症状。</p>
 <p>研究人员说，他们确定的大量无症状和症状前患有中共病毒的居民表明了通用检测的重要性。</p>
 <h3>英国每日新增病例逾18,000</h3>
+<figure id="attachment_12478668" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229083102.jpg"><img class="size-large wp-image-12478668" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229083102-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2020年10月15日，伦敦市中心维多利亚街沿途的公交车站候车亭显示本地Covid警报级别目前为“中”的标志。政府10月15日宣布伦敦的警报级别将从中调为高，伦敦人从而面临着更严格的COVID-19限制。（JUSTIN TALLIS/AFP via Getty Images）</figcaption></figure>
 <p>根据英国政府周一公布的数据，在过去24小时内，英国记录了18,804例Covid-19病例。</p>
 <p>死亡人数从周日的67人上升至80人。</p>
 <p>根据约翰霍普金斯大学的统计数据，截至美东时间周一上午11：30，英国的病例总数达到了744,101，死亡人数为43,736。</p>
@@ -339,7 +348,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10045322.md#1" target="_blank">《苦菜花》人物原型的真实人生（3）</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/21/n2972092.md#1" target="_blank">修炼者的心声：请支持正义良知  选择美好未来</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/3/n10359777.md#1" target="_blank">张立先：拜谒李庄</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/31/n11625277.md#1" target="_blank">法轮功真相传入太平洋热带岛国瓦努阿图</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
