--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -9,14 +9,14 @@
 	<p>【大纪元2020年10月19日讯】（大纪元记者夏雨、戴芙若、颜殊璟、林燕综合报导）10月19日全球<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）疫情最新情况：</p>
 <p>中共肺炎全球疫情及美国疫情大数据请点击<ahref="https://github.com/oqzulz329/djy/blob/master/gb/nf1368917.md#1" target="_blank" rel="noopener noreferrer">这里</a>。</p>
 <h2>要点：</h2>
-<p><strong><ahref="#_Toc2020101917">川普：下次总统辩论前测试</a></strong><br />
+<p><strong><ahref="#_Toc2020101917">墨西哥内阁多人染疫 总统周二接受测试</a></strong><br />
+<strong><ahref="#_Toc2020101917">川普：下次总统辩论前测试</a></strong><br />
 <strong><ahref="#_Toc2020101916">西班牙周末增近4万病例 总病例逼近百万</a></strong><br />
 <strong><ahref="#_Toc2020101915">研究：疗养院染疫居民测试前多无症状</a></strong><br />
 <strong><ahref="#_Toc2020101914">美加边境关闭延长至11月21日</a></strong><br />
 <strong><ahref="#_Toc2020101913">全球病例突破4000万大关</a></strong><br />
 <strong><ahref="#_Toc2020101912">TSA单日筛查人数首破百万</a></strong><br />
-<strong><ahref="#_Toc2020101911">比利时警告：疫情已失控 “海啸”逼近</a></strong><br />
-<strong><ahref="#_Toc2020101910b">英国议会女议员染疫住院</a></strong></p>
+<strong><ahref="#_Toc2020101911">比利时警告：疫情已失控 “海啸”逼近</a></strong></p>
 <p>根据约翰?霍普金斯大学（Johns Hopkins University）的数据，截至北京时间10月18日下午1时，全球确诊感染<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）的人数已突破4,000万，死亡人数超过111万（注：因中共和伊朗隐瞒疫情数据，真实数据比统计的要高）。</p>
 <p>美国确诊病例超过808万例，死亡超过21.8万人。美东时间周日（10月18日）中午12点21分，美国疾控中心（CDC）数据显示，全美在过去24小时新增53,157病例，死亡593人。每10万人感染人数最多的州是北达科他州、南达科他州、蒙大拿州和威斯康星州。</p>
 <p>欧洲疫情爆发，新病例增长幅度已经超过美国。周日意大利新增病例达11,705，创下纪录，重症室人数也是10天前的2倍。国际货币基金组织表示，全面封锁的可能性不大。</p>
@@ -25,6 +25,14 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<p><a name="_Toc2020101917"></a></p>
+<h3>墨西哥内阁多人染疫 总统周二接受测试</h3>
+<figure id="attachment_12295732" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/07/000_1UU8OR.jpg"><img class="size-large wp-image-12295732" src="https://i.epochtimes.com/assets/uploads/2020/07/000_1UU8OR-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2020年7月8日，来美访问的墨西哥总统安德烈斯·曼努埃尔·洛佩兹·奥夫拉多尔（Andres Manuel Lopez Obrador）在华盛顿特区白宫举行的工作晚宴前发表讲话。（JIM WATSON / AFP）</figcaption></figure>
+<p>墨西哥总统奥夫拉多尔将在星期二接受Covid-19病毒检测，此前有消息称，海事部长杜兰（José Rafael Ojeda Duran）上周对该病毒进行了阳性检测。</p>
+<p>奥夫拉多尔在每天的早间新闻发布会上说，他通常每周都要接受测试以确保安全。 “我会注意并保持安全距离，这是关键。 幸运的是，我没有任何症状。”</p>
+<p>这是他首次公开声明每周接受测试。</p>
+<p>最近几周，内阁的几位成员的测试都得到了阳性结果，其中包括墨西哥财政部长埃雷拉（Arturo Herrera）和社会卫生研究所所长罗伯莱多（Zoé Robledo）等在内的一些内幕成员。</p>
+<p>截至周日，墨西哥至少有851,227例确诊的Covid-19病例，其中86,167人死亡。</p>
 <h3>疫情重创伦巴第大区 意政府同意新限制要求</h3>
 <figure id="attachment_12487358" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229118863.jpg"><img class="size-large wp-image-12487358" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229118863-600x399.jpg" alt="" width="600" b="399" /></a><figcaption class="wp-caption-text">2020年10月17日，戴着口罩的人们穿过米兰大教堂广场。意大利政府已强制要求在户外佩戴面部防护用品，以应对中共病毒大流行的蔓延。（MIGUEL MEDINA/AFP via Getty Images）</figcaption></figure>
 <p>意大利卫生部发言人周一称，意大利政府同意受到COVID-19打击的伦巴第大区的要求，施加进一步限制，以遏制新的感染激增。</p>
@@ -348,7 +356,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/4/n10889466.md#1" target="_blank">裴毅然：中共小知党（四）</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/1/n10946163.md#1" target="_blank">新加坡法轮功学员修炼故事 真善忍改变人心</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/27/n10670499.md#1" target="_blank">林辉：但愿来生不姓“胡”</a></li><li><a href="https://github.com/oqzulz329/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/11/n11250223.md#1" target="_blank">美国北德州十城市宣布 法轮大法日</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
