--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -31,8 +31,8 @@
 <p>墨西哥总统奥夫拉多尔将在星期二接受Covid-19病毒检测，此前有消息称，海事部长杜兰（José Rafael Ojeda Duran）上周对该病毒进行了阳性检测。</p>
 <p>奥夫拉多尔在每天的早间新闻发布会上说，他通常每周都要接受测试以确保安全。 “我会注意并保持安全距离，这是关键。 幸运的是，我没有任何症状。”</p>
 <p>这是他首次公开声明每周接受测试。</p>
-<p>最近几周，内阁的几位成员的测试都得到了阳性结果，其中包括墨西哥财政部长埃雷拉（Arturo Herrera）和社会卫生研究所所长罗伯莱多（Zoé Robledo）等在内的一些内幕成员。</p>
-<p>截至周日，墨西哥至少有851,227例确诊的Covid-19病例，其中86,167人死亡。</p>
+<p>最近几周，内阁的几位成员的测试都得到了阳性结果，其中包括墨西哥财政部长埃雷拉（Arturo Herrera）和社会卫生研究所所长罗伯莱多（Zoé Robledo）等在内。</p>
+<p>截至美东时间周一下午3:30，墨西哥至少有851,227例确诊的Covid-19病例，86,167人死亡。</p>
 <h3>疫情重创伦巴第大区 意政府同意新限制要求</h3>
 <figure id="attachment_12487358" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229118863.jpg"><img class="size-large wp-image-12487358" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229118863-600x399.jpg" alt="" width="600" b="399" /></a><figcaption class="wp-caption-text">2020年10月17日，戴着口罩的人们穿过米兰大教堂广场。意大利政府已强制要求在户外佩戴面部防护用品，以应对中共病毒大流行的蔓延。（MIGUEL MEDINA/AFP via Getty Images）</figcaption></figure>
 <p>意大利卫生部发言人周一称，意大利政府同意受到COVID-19打击的伦巴第大区的要求，施加进一步限制，以遏制新的感染激增。</p>
@@ -356,7 +356,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/27/n10670499.md#1" target="_blank">林辉：但愿来生不姓“胡”</a></li><li><a href="https://github.com/oqzulz329/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/11/n11250223.md#1" target="_blank">美国北德州十城市宣布 法轮大法日</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/9/n10203021.md#1" target="_blank">泣血而书——民国与文革中知识份子的命运</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/23/n11890264.md#1" target="_blank">《转法轮》为波兰青年打造全新的生命</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
