--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -3,7 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/oqzulz329/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/oqzulz329/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/oqzulz329/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【最新疫情10.19】全球病例突破4千万大关</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/GettyImages-1228568126-600x400.jpg" />
-<h6>2020年9月17日，巴西帕拉（Para）州的拜克索康汀斯（Baixo Tocantins），政府卫生工作者在的伊加拉佩·米里（Igarape-Miri）的穆鲁蒂普库河（Murutipucu River）的河滨社区为一名做中共病毒测试。 （Photo by TARSO SARRAF / AFP）
+<h6>2020年9月17日，巴西帕拉（Para）州的拜克索康汀斯（Baixo Tocantins），政府卫生工作者在的伊加拉佩·米里（Igarape-Miri）的穆鲁蒂普库河（Murutipucu River）的河滨社区为一人做中共病毒测试。 （Photo by TARSO SARRAF / AFP）
 </h6>
 <hr>
 	<p>【大纪元2020年10月19日讯】（大纪元记者夏雨、戴芙若、颜殊璟、林燕综合报导）10月19日全球<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）疫情最新情况：</p>
@@ -25,6 +25,12 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>黎巴嫩安全主管测试呈阳性</h3>
+<p>黎巴嫩安全部门周一表示，一名正在美国访问的黎巴嫩高级安全官员对COVID-19测试呈阳性，这迫使他推迟从华盛顿的会谈、返回黎巴嫩、以及不得不取消原定在巴黎举行的会议。</p>
+<p>总安全局局长阿巴斯·易卜拉欣（Abbas Ibrahim）少将目前身体健康。</p>
+<p>据《华尔街日报》报导，易卜拉欣上周在白宫会见了美国国家安全顾问奥布赖恩，讨论在叙利亚被拘留的美国公民一事。</p>
+<p>川普政府官员证实，白宫官员于今年早些时候前往大马士革与叙利亚政府举行秘密会议，以寻求释放两名据信被关押在那里的美国公民。</p>
+<p>黎巴嫩官员说，易卜拉欣上个月在巴黎与法国情报局长伯埃米举行了会谈，讨论组建新政府以应对黎巴嫩严重的经济危机。</p>
 <p><a name="_Toc2020101917"></a></p>
 <h3>墨西哥内阁多人染疫 总统周二接受测试</h3>
 <figure id="attachment_12295732" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/07/000_1UU8OR.jpg"><img class="size-large wp-image-12295732" src="https://i.epochtimes.com/assets/uploads/2020/07/000_1UU8OR-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2020年7月8日，来美访问的墨西哥总统安德烈斯·曼努埃尔·洛佩兹·奥夫拉多尔（Andres Manuel Lopez Obrador）在华盛顿特区白宫举行的工作晚宴前发表讲话。（JIM WATSON / AFP）</figcaption></figure>
@@ -356,7 +362,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/12/n10478618.md#1" target="_blank">本真：《推背图》预言中美朝日大战及结局（三）</a></li><li><a href="https://github.com/oqzulz329/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/10/21/n4555059.md#1" target="_blank">94岁老人：没有法轮功我早就不在人世了</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/26/n9993508.md#1" target="_blank">爱德华：中共从道德上彻底摧毁中国人</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/18/n8113015.md#1" target="_blank">融入东方智慧 西人健康顾问获提振</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
