--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -362,7 +362,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/26/n9993508.md#1" target="_blank">爱德华：中共从道德上彻底摧毁中国人</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/18/n8113015.md#1" target="_blank">融入东方智慧 西人健康顾问获提振</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/22/n10656949.md#1" target="_blank">胡健：少年反革命</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/22/n11132948.md#1" target="_blank">93岁老人：李洪志大师给了我第二次生命</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
