--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -362,7 +362,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/28/n10879954.md#1" target="_blank">林辉：共产党国家的“作秀公审”</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/18/n8113015.md#1" target="_blank">融入东方智慧 西人健康顾问获提振</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/10/n11248062.md#1" target="_blank">共产暴政录：共产革命前后的古巴华人</a></li><li><a href="https://github.com/oqzulz329/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/22/n11273123.md#1" target="_blank">汶川地震山崩地裂的那一刻</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
