--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -9,14 +9,14 @@
 	<p>【大纪元2020年10月19日讯】（大纪元记者夏雨、戴芙若、颜殊璟、林燕综合报导）10月19日全球<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）疫情最新情况：</p>
 <p>中共肺炎全球疫情及美国疫情大数据请点击<ahref="https://github.com/oqzulz329/djy/blob/master/gb/nf1368917.md#1" target="_blank" rel="noopener noreferrer">这里</a>。</p>
 <h2>要点：</h2>
-<p><strong><ahref="#_Toc2020101917">墨西哥内阁多人染疫 总统周二接受测试</a></strong><br />
+<p><strong><ahref="#_Toc2020101918">爱尔兰再度全国封锁 欧盟首个</a></strong><br />
+<strong><ahref="#_Toc2020101917">墨西哥内阁多人染疫 总统周二接受测试</a></strong><br />
 <strong><ahref="#_Toc2020101917">川普：下次总统辩论前测试</a></strong><br />
 <strong><ahref="#_Toc2020101916">西班牙周末增近4万病例 总病例逼近百万</a></strong><br />
 <strong><ahref="#_Toc2020101915">研究：疗养院染疫居民测试前多无症状</a></strong><br />
 <strong><ahref="#_Toc2020101914">美加边境关闭延长至11月21日</a></strong><br />
 <strong><ahref="#_Toc2020101913">全球病例突破4000万大关</a></strong><br />
-<strong><ahref="#_Toc2020101912">TSA单日筛查人数首破百万</a></strong><br />
-<strong><ahref="#_Toc2020101911">比利时警告：疫情已失控 “海啸”逼近</a></strong></p>
+<strong><ahref="#_Toc2020101912">TSA单日筛查人数首破百万</a></strong></p>
 <p>根据约翰?霍普金斯大学（Johns Hopkins University）的数据，截至北京时间10月18日下午1时，全球确诊感染<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）的人数已突破4,000万，死亡人数超过111万（注：因中共和伊朗隐瞒疫情数据，真实数据比统计的要高）。</p>
 <p>美国确诊病例超过808万例，死亡超过21.8万人。美东时间周日（10月18日）中午12点21分，美国疾控中心（CDC）数据显示，全美在过去24小时新增53,157病例，死亡593人。每10万人感染人数最多的州是北达科他州、南达科他州、蒙大拿州和威斯康星州。</p>
 <p>欧洲疫情爆发，新病例增长幅度已经超过美国。周日意大利新增病例达11,705，创下纪录，重症室人数也是10天前的2倍。国际货币基金组织表示，全面封锁的可能性不大。</p>
@@ -25,7 +25,21 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<p><a name="_Toc2020101918"></a></p>
+<h3>爱尔兰再度全国封锁 欧盟首个</h3>
+<figure id="attachment_12487488" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229172329.jpg"><img class="size-large wp-image-12487488" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229172329-600x396.jpg" alt="" width="600" b="396" /></a><figcaption class="wp-caption-text">爱尔兰总理米歇尔·马丁（Micheal Martin）于2020年10月19日在都柏林的政府大楼对全国发表电视讲话。马丁说，爱尔兰是第一个再次进行全国封锁的欧盟国家，发布了“居家令”等限制措施，但要求学校保持开放。 （JULIEN BEHAL/POOL/AFP via Getty Images）</figcaption></figure>
+<p>总理米歇尔·马丁（Micheál Martin）周一宣布，爱尔兰将进入“ 5级”警报限制，为期六周，这是爱尔兰对中共病毒的最高警报级别。</p>
+<p>新的限制将从当地时间周三午夜开始实施，但学校和儿童看护服务将保持开放，这与大流行开始时的封锁不同。</p>
+<p>上周，爱尔兰国家公共卫生应急小组（National Public Health Emergency Team，简称NPHET）在本月第二次向政府建议应采取更严格的措施以阻止该病毒的传播。</p>
+<p>10月初，爱尔兰政府没有听取NPHET的建议，取而代之的是选择在全国范围内实施了为期三周的“三级”限制。</p>
+<p>在下一步新的限制下，在家中或花园中不能有社交聚会，而餐馆、咖啡馆和酒吧只能开放提供外卖服务。</p>
+<p>尽管最初的“ 5级”警报限制规定只有6人可以参加婚礼，但马丁表示，他们将继续允许25人参加婚礼。政府还要求人们在家工作，除非被认为是必需工人。</p>
+<p>上周，爱尔兰记录了7,495例新增病例，有26人死亡。</p>
+<p>与上周记录的4,510例病例和17例死亡相比，这周病例和死亡人数大幅增长。</p>
+<p>周一，自大流行开始以来，该国记录的病例总数也超过了50,000。</p>
+<p>“天越来越短，越来越冷，但是请你记住这一点；即使冬天来了，也有希望，有阳光。如果我们在接下来的六周里聚在一起，我们将有机会以一种有意义的方式庆祝圣诞节，”马丁在周一对全国的讲话中说。</p>
 <h3>黎巴嫩安全主管测试呈阳性</h3>
+<figure id="attachment_12487470" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228661941.jpg"><img class="size-large wp-image-12487470" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228661941-600x408.jpg" alt="" width="600" b="408" /></a><figcaption class="wp-caption-text">2020年7月22日，黎巴嫩总安全局局长阿巴斯·易卜拉欣（Abbas Ibrahim）在其首都贝鲁特的办公室接受采访。</figcaption></figure>
 <p>黎巴嫩安全部门周一表示，一名正在美国访问的黎巴嫩高级安全官员对COVID-19测试呈阳性，这迫使他推迟从华盛顿的会谈、返回黎巴嫩、以及不得不取消原定在巴黎举行的会议。</p>
 <p>总安全局局长阿巴斯·易卜拉欣（Abbas Ibrahim）少将目前身体健康。</p>
 <p>据《华尔街日报》报导，易卜拉欣上周在白宫会见了美国国家安全顾问奥布赖恩，讨论在叙利亚被拘留的美国公民一事。</p>
@@ -362,7 +376,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/9/n10899776.md#1" target="_blank">林辉：姚依林回忆“一二九运动”证实三件事</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/22/n11273218.md#1" target="_blank">用实际行动赎罪 派出所所长胃癌痊愈</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/15/n9842766.md#1" target="_blank">围墙不是永久景观——从柏林墙说起</a></li><li><a href="https://github.com/oqzulz329/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11489263.md#1" target="_blank">伦敦盛大游行 34国法轮功学员吁停止迫害</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
